[package]
name = "weirdgrep"
version = "1.0.5"
edition = "2021"
description = "Weird grepping tool for huge pages of code"
repository = "https://github.com/vaelio/weirdgrep.git"
license= "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
glob = "0.3.1"
regex = "1"
